Refactor MCP contracts and E2E runtime setup (#39235)
* Refactor MCP contracts and E2E runtime setup

- centralize descriptor-driven metadata and simplify runtime configuration
- preserve algorithm discovery confidence across compatibility fallbacks
- remove unused runtime metadata and legacy test wrappers
- discover packaged and Docker E2E ports at runtime

* Refactor MCP contracts and E2E runtime setup

- centralize descriptor-driven metadata and simplify runtime configuration
- preserve algorithm discovery confidence across compatibility fallbacks
- remove unused runtime metadata and legacy test wrappers
- discover packaged and Docker E2E ports at runtime